# osrs_flipper_ai

./: .env  .gitignore  README.md  diag_test.py  nohup.out  pyproject.toml  requirements.txt  run_dashboard.sh  run_pipeline.sh  run_train.ps1  setup.ps1  setup.py
backend/: main.py  models.py
dashboard/: dashboard.py
data/: features_1759797662.parquet  snapshot_1759747255.parquet  snapshot_1759747855.parquet  snapshot_1759748455.parquet  snapshot_1759748755.parquet  snapshot_1759749055.parquet  snapshot_1759749355.parquet  snapshot_1759750255.parquet  snapshot_1759751156.parquet  snapshot_1759751455.parquet  snapshot_1759751755.parquet  snapshot_1759752055.parquet  snapshot_1759752655.parquet  snapshot_1759752955.parquet  snapshot_1759753855.parquet  snapshot_1759754155.parquet  snapshot_1759754455.parquet  snapshot_1759755055.parquet  snapshot_1759755355.parquet  snapshot_1759755655.parquet  snapshot_1759757455.parquet  snapshot_1759758055.parquet  snapshot_1759758655.parquet  snapshot_1759758955.parquet  snapshot_1759759255.parquet  snapshot_1759759555.parquet  snapshot_1759760755.parquet  snapshot_1759761055.parquet  snapshot_1759761955.parquet  snapshot_1759762555.parquet  snapshot_1759763155.parquet  snapshot_1759763455.parquet  snapshot_1759764355.parquet  snapshot_1759764655.parquet  snapshot_1759764955.parquet  snapshot_1759765255.parquet  snapshot_1759765555.parquet  snapshot_1759766455.parquet  snapshot_1759766755.parquet  snapshot_1759767055.parquet  (+127 more)
data_ingest/: backfill.py  ingest.py
frontend/: index.html  package-lock.json  package.json
src/: api.py  (+8 more)
(+581 files in other folders)
